# ai-software-estimator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scaleup.md
EstimateModel/: Modello di Stima V2.md  Modello di Stima.md
app/: config.py  dependencies.py  main.py
app/api/: routes.py  schemas.py
app/core/: claude_client.py  estimator.py  github_client.py  report_generator.py  saves.py
app/models/: estimate.py
app/templates/: history.html  index.html  report_template.md.j2  settings.html
prompts/: chat_system_prompt.txt  estimation_system_prompt.txt
static/: app.js  history.js  report-utils.js  settings.js  style.css  timeline.js
tests/e2e/: test_estimation_v2.py
